--- a/plugin.yaml
+++ b/plugin.yaml
@@ -71,6 +71,57 @@ node_types:
             openstack_config:
               default: {}
 
+  cloudify.openstack.nodes.ScalableServer:
+    derived_from: cloudify.openstack.nodes.Server
+    properties:
+      volumes:
+        default: {}
+      floatingips:
+        default: {}
+    interfaces:
+      cloudify.interfaces.lifecycle:
+        create:
+          implementation: openstack.nova_plugin.scalable_server.create
+          inputs:
+            args:
+              default: {}
+            openstack_config:
+              default: {}
+        start:
+          implementation: openstack.nova_plugin.scalable_server.start
+          inputs:
+            start_retry_interval:
+              description: Polling interval until the server is active in seconds
+              type: integer
+              default: 30
+            private_key_path:
+              description: >
+                Path to private key which matches the server's
+                public key. Will be used to decrypt password in case
+                the "use_password" property is set to "true"
+              type: string
+              default: ''
+            openstack_config:
+              default: {}
+        stop:
+          implementation: openstack.nova_plugin.scalable_server.stop
+          inputs:
+            openstack_config:
+              default: {}
+        delete:
+          implementation: openstack.nova_plugin.scalable_server.delete
+          inputs:
+            openstack_config:
+              default: {}
+      cloudify.interfaces.validation:
+        creation:
+          implementation: openstack.nova_plugin.scalable_server.creation_validation
+          inputs:
+            args:
+              default: {}
+            openstack_config:
+              default: {}
+
   cloudify.openstack.nodes.WindowsServer:
     derived_from: cloudify.openstack.nodes.Server
     properties:
